# cpp-template

./: CMakeLists.txt
include/: singleton.hpp
samples/hello/: CMakeLists.txt
src/: main.cc  version.cc
tests/: CMakeLists.txt  hello.test.cc
